--- a/app/views/v6/employer/create/wages.html
+++ b/app/views/v6/employer/create/wages.html
@@ -109,7 +109,7 @@ How much would you like to pay the apprentice? - Your apprenticeship adverts - {
       </fieldset>
     </div>
        
-      <div class="govuk-character-count" data-module="character-count" data-minlength="50" data-maxlength="250">
+      <div class="govuk-character-count" data-module="govuk-character-count" data-minlength="50" data-maxlength="250">
         <div class="govuk-form-group">
           <label class="govuk-label govuk-label--m" for="WageAdditionalInformation">
             Extra information about pay (optional)
@@ -117,9 +117,9 @@ How much would you like to pay the apprentice? - Your apprenticeship adverts - {
           <div id="WageAdditionalInformation-hint" class="govuk-hint">
             For example bonus schemes, performance increases or benefits
           </div>
-          <textarea class="govuk-textarea govuk-!-width-three-quarters js-character-count" id="WageAdditionalInformation" name="WageAdditionalInformation" rows="5"></textarea>          
+          <textarea class="govuk-textarea govuk-!-width-three-quarters govuk-js-character-count" id="WageAdditionalInformation" name="WageAdditionalInformation" rows="5"></textarea>          
         </div>
-        <div id="WageAdditionalInformation-hint-info" class="govuk-hint govuk-character-count__message" aria-live="polite">
+        <div id="WageAdditionalInformation-info" class="govuk-hint govuk-character-count__message" aria-live="polite">
           You can enter up to 250 characters
         </div>
       </div>
