--- a/app/views/v6/employer/create/duration.html
+++ b/app/views/v6/employer/create/duration.html
@@ -30,7 +30,7 @@ Duration and working hours - Your apprenticeship adverts - {{serviceName}} - GOV
         </select>
       </div>
 
-      <div class="govuk-character-count" data-module="character-count" data-minlength="50" data-maxlength="250">
+      <div class="govuk-character-count" data-module="govuk-character-count" data-minlength="50" data-maxlength="250">
         <div class="govuk-form-group">
           <label class="govuk-label govuk-label--m" for="workingWeekDescription">
             Details of working week
@@ -38,9 +38,9 @@ Duration and working hours - Your apprenticeship adverts - {{serviceName}} - GOV
           <div id="workingWeekDescription-hint" class="govuk-hint">
             For example, Monday to Friday 9am to 5pm, shifts, may work evenings and weekends.
           </div>      
-          <textarea class="govuk-textarea govuk-!-width-three-quarters js-character-count" id="workingWeekDescription" name="workingWeekDescription" rows="5"></textarea>
+          <textarea class="govuk-textarea govuk-!-width-three-quarters govuk-js-character-count" id="workingWeekDescription" name="workingWeekDescription" rows="5"></textarea>
         </div>
-        <div id="shortDescription-hint-info" class="govuk-hint govuk-character-count__message" aria-live="polite">
+        <div id="workingWeekDescription-info" class="govuk-hint govuk-character-count__message" aria-live="polite">
           You can enter up to 250 characters
         </div>
       </div>
