--- a/app/views/v6/employer/create/things-to-consider.html
+++ b/app/views/v6/employer/create/things-to-consider.html
@@ -14,7 +14,7 @@ What else do you want the applicant to consider? (optional) - Your apprenticeshi
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
   
-    <div class="govuk-character-count" data-module="govuk-character-count" data-maxlength="350">
+    
       <div class="govuk-form-group">
         <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
         <h1 class="govuk-label-wrapper">
@@ -25,13 +25,9 @@ What else do you want the applicant to consider? (optional) - Your apprenticeshi
         <div id="with-hint-hint" class="govuk-hint">
           For example, if the vacancy will involve working outdoors or lifting heavy objects
         </div>
-        <textarea class="govuk-textarea govuk-js-character-count" id="ThingsToConsider" name="ThingsToConsider" rows="5" aria-describedby="ThingsToConsider-info ThingsToConsider-hint"></textarea>
+        <textarea class="govuk-textarea" id="ThingsToConsider" name="ThingsToConsider" rows="5" aria-describedby="ThingsToConsider-info ThingsToConsider-hint"></textarea>
       </div>
 
-      <div id="ThingsToConsider-info" class="govuk-hint govuk-character-count__message" aria-live="polite">
-        You can enter up to 200 characters
-      </div>
-    </div>
     
     <form method="post">
       <div class="govuk-button-group">
