Updated cancel link to go back to qualifications instead of dashboard for employer and provider

--- a/app/views/v6/employer/create/qualifications-list.html
+++ b/app/views/v6/employer/create/qualifications-list.html
@@ -44,7 +44,7 @@ Qualifications - Your apprenticeship advert - {{serviceName}} - GOV.UK
           <div class="govuk-button-group govuk-!-margin-top-7">
             <a href="things-to-consider" class="govuk-button">Save and continue</a>
 
-            <a href="../dashboard" class="govuk-link" href="#">Cancel</a>
+            <a href="qualifications" class="govuk-link" href="#">Cancel</a>
           </div>
 
         </form>
