--- a/app/views/v6/provider/create/qualifications-list.html
+++ b/app/views/v6/provider/create/qualifications-list.html
@@ -44,7 +44,7 @@ Qualifications - Recruitment - {{serviceName}} - GOV.UK
               text: "Save and continue",
               href: "future-prospects"
             }) }}   
-            <a href="../dashboard" class="govuk-body das-button--link">Cancel</a>
+            <a href="qualifications" class="govuk-body das-button--link">Cancel</a>
             <!--<input type="submit" class="govuk-button" data-module="govuk-button" data-automation="btn-continue" name="button" value="Preview">-->
           </div>
         </form>
