Added delete button to previews

--- a/app/views/v6/employer/create/advert-preview.html
+++ b/app/views/v6/employer/create/advert-preview.html
@@ -238,6 +238,8 @@ Check your answers before submitting your advert - Your apprenticeship adverts -
           <a href="check-your-answers" class="govuk-button govuk-button--secondary">Change your advert</a>
         </div>
 
+        <p><a href="#">Delete advert</a></p>
+
       </form>
 
     </div>
