--- a/app/views/v6/provider/create/preview-vacancy2.html
+++ b/app/views/v6/provider/create/preview-vacancy2.html
@@ -226,6 +226,8 @@ Preview your vacancy - Recruitment - {{serviceName}} - GOV.UK
           <a href="check-your-answers" class="govuk-button govuk-button--secondary">Change your answers</a>
         </div>
 
+        <p><a href="#">Delete advert</a></p>
+
       </form>
 
     </div>
