Updated copy on traineeships

--- a/app/views/v6/traineeships/create/std-confirm.html
+++ b/app/views/v6/traineeships/create/std-confirm.html
@@ -14,7 +14,7 @@ Confirm apprenticeship training - Recruitment - {{serviceName}} - GOV.UK
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Optical Assistant Traineeship{% endif %}</span>
-    <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Confirm apprenticeship training course</h1>
+    <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Confirm traineeship training course</h1>
 
     <!-- <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Business Administration Apprentice{% endif %} vacancy</span>
     <h1 class="govuk-heading-xl">
@@ -41,7 +41,7 @@ Confirm apprenticeship training - Recruitment - {{serviceName}} - GOV.UK
       </strong>
     </div>
     {% endif %}
-    <p class="govuk-body govuk-!-margin-bottom-0"><a href="std-select?change=yes">Change apprenticeship training</a><br></p>
+    <p class="govuk-body govuk-!-margin-bottom-0"><a href="std-select?change=yes">Change traineeship training</a><br></p>
     </div>
     <form method="post">
         <div class="govuk-button-group">
