--- a/app/views/v6/traineeships/create/std-select.html
+++ b/app/views/v6/traineeships/create/std-select.html
@@ -17,7 +17,7 @@ What training will the apprentice take? - Recruitment - {{serviceName}} - GOV.UK
         <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Optical Assistant Traineeship{% endif %}</span>
 
         <h1 class="govuk-label-wrapper">
-          <label class="govuk-label govuk-label--xl" for="searchClients">What training course will the apprentice take?
+          <label class="govuk-label govuk-label--xl" for="searchClients">What training course will the trainee take?
         </h1>
         <div class="" style="display:none;">
           {% for item in data.training %}
