--- a/app/views/v6/provider/create/preview-vacancy.html
+++ b/app/views/v6/provider/create/preview-vacancy.html
@@ -238,7 +238,7 @@ Preview your vacancy - Recruitment - {{serviceName}} - GOV.UK
           <a href="check-your-answers" class="govuk-button govuk-button--secondary">Change your answers</a>
         </div>
 
-        <p><a href="#">Delete advert</a></p>
+        <p><a href="#">Delete vacancy</a></p>
 
       </form>
 
