Updates to traineeship preview

--- a/app/views/v6/traineeships/create/preview-vacancy.html
+++ b/app/views/v6/traineeships/create/preview-vacancy.html
@@ -22,7 +22,7 @@ Preview your vacancy - Recruitment - {{serviceName}} - GOV.UK
       <div class="govuk-grid-row govuk-!-margin-bottom-6">
         <div class="govuk-grid-column-full">
           <h2 class="govuk-heading-xl govuk-!-margin-bottom-6 govuk-!-width-three-quarters">
-            {% if data.title %}{{data.title}}{% else %}Optical Assistant Traineeship{% endif %}
+            {% if data.title %}{{data.title}}{% else %}Customer Relations Trainee{% endif %}
             <div class="govuk-caption-xl govuk-!-margin-top-1">ROCKIT CHILDREN'S BOUTIQUE LTD</div>
           </h2>
         </div>
@@ -77,43 +77,43 @@ Preview your vacancy - Recruitment - {{serviceName}} - GOV.UK
         </div>
 
         <div class="govuk-grid-column-one-third">
-          <ul class="govuk-list">
+          <h3 class="govuk-heading-s govuk-!-margin-bottom-1">Working week</h3>
+          <p>Flexible working, Full-time, Compressed Hours<br>
+            Total hours per week: 37
+          </p>
 
-            <li>
-              <h3 class="govuk-heading-s govuk-!-margin-bottom-1">Working week</h3>
-              <p>Flexible working, Full-time, Compressed Hours<br>
-                Total hours per week: 37
-              </p>
-            </li>
-            <li>
-              <h3 class="govuk-heading-s govuk-!-margin-bottom-1">Expected duration</h3>
-              <p>45 Months</p>
-            </li>
-            <li>
-              <h3 class="govuk-heading-s govuk-!-margin-bottom-1">Possible start date</h3>
-              <p id="vacancy-start-date">01 Sep 2022</p>
-            </li>
-            <li>
-                <h3 class="govuk-heading-s govuk-!-margin-bottom-1">Date posted</h3>
-                <p id="vacancy-posted-date">28 Feb 2022</p>
-            </li>
-            <li>
-            </li>
-            <li>
-                <h3 class="govuk-heading-s govuk-!-margin-bottom-1">Traineeship course</h3>
-                <p id="vacancy-type" itemprop="employmentType">
-                    Advanced
-                        <br>Level 3 (A level)</p>
-            </li>
-            <li>
-                <h3 class="govuk-heading-s govuk-!-margin-bottom-1">Reference number</h3>
-                <p id="vacancy-reference-id">VAC1000031062</p>
-            </li>
-            <li>
-                    <h3 class="govuk-heading-s govuk-!-margin-bottom-1">Positions</h3>
-                    <p id="number-of-positions">10 available</p>
-            </li>
-          </ul>
+          <h3 class="govuk-heading-s govuk-!-margin-bottom-1">Expected duration</h3>
+          <p>45 Months</p>
+  
+          <h3 class="govuk-heading-s govuk-!-margin-bottom-1">Possible start date</h3>
+          <p>01 Sep 2022</p>
+ 
+          <h3 class="govuk-heading-s govuk-!-margin-bottom-1">Date posted</h3>
+          <p>28 Feb 2022</p>
+  
+          <h3 class="govuk-heading-s govuk-!-margin-bottom-1">Traineeship course</h3>
+          <p>
+            Advanced<br>
+            Level 3 (A level)
+          </p>
+
+          <h3 class="govuk-heading-s govuk-!-margin-bottom-1">Training provider</h3>
+          <p>NORTHERN TRAINING ACADEMY LIMITED</p>
+
+          <h3 class="govuk-heading-s govuk-!-margin-bottom-1">Contact</h3>
+          <p>
+            Debbie Taylor McDonald<br>
+            07554430571<br>
+            <span style="word-break:break-all">debbietaylormcdonald@northerntraining.com</span>
+          </p>
+
+          <h3 class="govuk-heading-s govuk-!-margin-bottom-1">Reference number</h3>
+          <p>VAC1000031062</p>
+
+          <h3 class="govuk-heading-s govuk-!-margin-bottom-1">Positions</h3>
+          <p>10 available</p>
+     
+
         </div>
 
 
