Updated traineeships header

--- a/app/assets/sass/components/_provider.scss
+++ b/app/assets/sass/components/_provider.scss
@@ -10,6 +10,11 @@
   .floating-menu {background: #f47738;}
 }
 
+#floating-menu-holder.trainee-floating-menu{
+  background: #669C9E !important;
+  .floating-menu {background: #669C9E;}
+}
+
 #floating-menu {
     clear: both;
     width: 100%;
