--- a/app/views/v6/traineeships/create/display-employer.html
+++ b/app/views/v6/traineeships/create/display-employer.html
@@ -1,4 +1,4 @@
-{% extends "tp-layout.html" %}
+{% extends "trainee-layout.html" %}
 
 {% block pageTitle %}
 Which employer name do you want on your vacancy? - Recruitment - {{serviceName}} - GOV.UK
