--- a/app/views/v6/traineeships/create/duration.html
+++ b/app/views/v6/traineeships/create/duration.html
@@ -1,4 +1,4 @@
-{% extends "tp-layout.html" %}
+{% extends "trainee-layout.html" %}
 
 {% block pageTitle %}
 Duration and working hours - Recruitment - {{serviceName}} - GOV.UK
