--- a/app/views/v6/traineeships/create/employers-select.html
+++ b/app/views/v6/traineeships/create/employers-select.html
@@ -1,4 +1,4 @@
-{% extends "tp-layout.html" %}
+{% extends "trainee-layout.html" %}
 
 {% block pageTitle %}
 Which employer do you want to create a vacancy for? - Recruitment - {{serviceName}} - GOV.UK
