--- a/app/views/v6/traineeships/create/location.html
+++ b/app/views/v6/traineeships/create/location.html
@@ -1,4 +1,4 @@
-{% extends "tp-layout.html" %}
+{% extends "trainee-layout.html" %}
 
 {% block pageTitle %}
 Where will the apprentices work? - Recruitment - {{serviceName}} - GOV.UK
