--- a/app/views/v6/traineeships/create/positions.html
+++ b/app/views/v6/traineeships/create/positions.html
@@ -1,4 +1,4 @@
-{% extends "tp-layout.html" %}
+{% extends "trainee-layout.html" %}
 
 {% block pageTitle %}
 How many positions are there for this apprenticeship? - Recruitment - {{serviceName}} - GOV.UK
