--- a/app/views/v6/traineeships/create/qualifications-list.html
+++ b/app/views/v6/traineeships/create/qualifications-list.html
@@ -1,4 +1,4 @@
-{% extends "tp-layout.html" %}
+{% extends "trainee-layout.html" %}
 
 {% block pageTitle %}
 Qualifications - Recruitment - {{serviceName}} - GOV.UK
