--- a/app/views/v6/traineeships/create/qualifications.html
+++ b/app/views/v6/traineeships/create/qualifications.html
@@ -1,4 +1,4 @@
-{% extends "tp-layout.html" %}
+{% extends "trainee-layout.html" %}
 
 {% block pageTitle %}
 What qualifications would you like the applicant to have? - Recruitment - {{serviceName}} - GOV.UK
