--- a/app/views/v6/traineeships/create/short-description.html
+++ b/app/views/v6/traineeships/create/short-description.html
@@ -1,4 +1,4 @@
-{% extends "tp-layout.html" %}
+{% extends "trainee-layout.html" %}
 
 {% block pageTitle %}
 Short description of the vacancy - Recruitment - {{serviceName}} - GOV.UK
