--- a/app/views/v6/traineeships/create/std-select.html
+++ b/app/views/v6/traineeships/create/std-select.html
@@ -1,4 +1,4 @@
-{% extends "tp-layout.html" %}
+{% extends "trainee-layout.html" %}
 
 {% block pageTitle %}
 What training will the apprentice take? - Recruitment - {{serviceName}} - GOV.UK
