--- a/app/views/v6/traineeships/create/things-to-consider.html
+++ b/app/views/v6/traineeships/create/things-to-consider.html
@@ -1,4 +1,4 @@
-{% extends "tp-layout.html" %}
+{% extends "trainee-layout.html" %}
 
 {% block pageTitle %}
 What else do you want the applicant to consider? (optional) - Recruitment - {{serviceName}} - GOV.UK
