--- a/app/views/v6/traineeships/dashboard.html
+++ b/app/views/v6/traineeships/dashboard.html
@@ -1,4 +1,4 @@
-{% extends "tp-layout.html" %}
+{% extends "trainee-layout.html" %}
 
 {% block pageTitle %}
 Recruitment - {{serviceName}} - GOV.UK
