--- a/app/views/v6/traineeships/create/about-employer.html
+++ b/app/views/v6/traineeships/create/about-employer.html
@@ -1,4 +1,4 @@
-{% extends "tp-layout.html" %}
+{% extends "trainee-layout.html" %}
 
 {% block pageTitle %}
 Add some information - Recruitment - {{serviceName}} - GOV.UK
