--- a/app/views/v6/traineeships/create/application-process.html
+++ b/app/views/v6/traineeships/create/application-process.html
@@ -1,4 +1,4 @@
-{% extends "tp-layout.html" %}
+{% extends "trainee-layout.html" %}
 
 {% block pageTitle %}
 How would you like to receive applications? - Recruitment - {{serviceName}} - GOV.UK
