--- a/app/views/v6/traineeships/create/confirmation.html
+++ b/app/views/v6/traineeships/create/confirmation.html
@@ -1,4 +1,4 @@
-{% extends "tp-layout.html" %}
+{% extends "trainee-layout.html" %}
 
 {% block pageTitle %}
 Vacancy submitted for approval - Recruitment - {{serviceName}} - GOV.UK
