--- a/app/views/v6/traineeships/create/contact.html
+++ b/app/views/v6/traineeships/create/contact.html
@@ -1,5 +1,4 @@
-
-{% extends "tp-layout.html" %}
+{% extends "trainee-layout.html" %}
 
 {% block pageTitle %}
 Add contact information - Recruitment - {{serviceName}} - GOV.UK
