--- a/app/views/v6/traineeships/create/dates.html
+++ b/app/views/v6/traineeships/create/dates.html
@@ -1,4 +1,4 @@
-{% extends "tp-layout.html" %}
+{% extends "trainee-layout.html" %}
 
 {% block pageTitle %}
 Important dates - Recruitment - {{serviceName}} - GOV.UK
