--- a/app/views/v6/traineeships/create/preview-vacancy.html
+++ b/app/views/v6/traineeships/create/preview-vacancy.html
@@ -1,4 +1,4 @@
-{% extends "tp-layout.html" %}
+{% extends "trainee-layout.html" %}
 
 {% block pageTitle %}
 Preview your vacancy - Recruitment - {{serviceName}} - GOV.UK
