--- a/app/views/v6/traineeships/create/start-page.html
+++ b/app/views/v6/traineeships/create/start-page.html
@@ -1,4 +1,4 @@
-{% extends "tp-layout.html" %}
+{% extends "trainee-layout.html" %}
 
 {% block pageTitle %}
 Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
