--- a/app/views/v6/traineeships/create/tp-title.html
+++ b/app/views/v6/traineeships/create/tp-title.html
@@ -1,4 +1,4 @@
-{% extends "tp-layout.html" %}
+{% extends "trainee-layout.html" %}
 
 {% block pageTitle %}
 What do you want to call this vacancy? - Recruitment - {{serviceName}} - GOV.UK
