--- a/app/views/v6/traineeships/create/training-confirm.html
+++ b/app/views/v6/traineeships/create/training-confirm.html
@@ -1,4 +1,4 @@
-{% extends "tp-layout.html" %}
+{% extends "trainee-layout.html" %}
 
 {% block pageTitle %}
 Confirm apprenticeship training - Recruitment - {{serviceName}} - GOV.UK
