--- a/app/views/v6/traineeships/create/wages.html
+++ b/app/views/v6/traineeships/create/wages.html
@@ -1,4 +1,4 @@
-{% extends "tp-layout.html" %}
+{% extends "trainee-layout.html" %}
 
 {% block pageTitle %}
 How much would you like to pay the apprentice? - Recruitment - {{serviceName}} - GOV.UK
