--- a/app/views/v6/traineeships/create/dates.html
+++ b/app/views/v6/traineeships/create/dates.html
@@ -41,11 +41,11 @@ Important dates - Recruitment - {{serviceName}} - GOV.UK
     </div>
     {% endif %} -->
 
-    <form method="post">
+    <form method="post" action="work-experience-provided">
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset" aria-describedby="closing-hint" role="group">
           <label class="govuk-label govuk-label--m" for="shortDescription">
-            Traineeship closing date
+            Application closing date
           </label>
           <div id="closing-hint" class="govuk-hint">
             For example, 19 11 2021
@@ -85,7 +85,7 @@ Important dates - Recruitment - {{serviceName}} - GOV.UK
       <div class="govuk-form-group {% if hasError and errorType == "dates" %}govuk-form-group--error{%endif%}">
         <fieldset class="govuk-fieldset" aria-describedby="start-hint" role="group">
           <label class="govuk-label govuk-label--m" for="shortDescription">
-            Traineeship start date
+            Start date
 
           </label>
           {% if hasError and errorType == "dates" %}
