--- a/app/views/v6/traineeships/create/future-prospects.html
+++ b/app/views/v6/traineeships/create/future-prospects.html
@@ -23,7 +23,7 @@ Description of the vacancy - Recruitment - {{serviceName}} - GOV.UK
         </label>
       </h1>
       <div id="with-hint-hint" class="govuk-hint">
-        You may want to mention specific routes they could take once qualified.
+        You may want to mention specific routes they could take. For example, an apprenticeship.
       </div>
       <textarea class="govuk-textarea" id="OutcomeDescription" name="OutcomeDescription" rows="5" aria-describedby="OutcomeDescription-info OutcomeDescription-hint"></textarea>
     </div>
