--- a/app/views/v6/traineeships/create/location.html
+++ b/app/views/v6/traineeships/create/location.html
@@ -19,7 +19,7 @@ Where will the apprentices work? - Recruitment - {{serviceName}} - GOV.UK
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
             <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Optical Assistant Traineeship{% endif %}</span>
             <h1 class="govuk-fieldset__heading">
-              Where {% if data.numberOfPositions > 1 %}will the 6 positions{% else %}will the trainee{% endif %} work?
+              Where is the work experience placement?
             </h1>
           </legend>
           <div class="govuk-radios" data-module="govuk-radios">
