Updated the flow for provider and traineeships so that name of employer is before task list

--- a/app/views/v6/provider/create/employers-select.html
+++ b/app/views/v6/provider/create/employers-select.html
@@ -26,7 +26,7 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
       </div>
     </div>
     {% endif %}
-    <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
+    <!-- <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span> -->
     <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Which organisation do you want to create a vacancy for?</h1>
     <form method="post" id="employers-form" action="">
     <!--<form method="post" id="employers-form" action="create-vacancy">-->
@@ -143,7 +143,7 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
       <!--<button type="submit" class="govuk-button" data-module="govuk-button">Save and continue</button>-->
       {{ govukButton({
         text: "Save and continue",
-        href: "employer"
+        href: "task-list"
       }) }}      
       <a href="../dashboard" class="govuk-body das-button--link">Cancel</a>
     </form>
