--- a/app/views/v6/provider/create/start-page.html
+++ b/app/views/v6/provider/create/start-page.html
@@ -33,7 +33,7 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
       </div>
 
 
-      {% set _forwardLink = "task-list" %}
+      {% set _forwardLink = "employers-select" %}
 
       {{ govukButton({
         text: "Start now",
