--- a/app/views/v6/traineeships/create/start-page.html
+++ b/app/views/v6/traineeships/create/start-page.html
@@ -28,7 +28,7 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
       </ul>
 
 
-      {% set _forwardLink = "task-list" %}
+      {% set _forwardLink = "employers-select" %}
 
       {{ govukButton({
         text: "Start now",
