Provider task list copy change

--- a/app/views/v6/provider/create/task-list.html
+++ b/app/views/v6/provider/create/task-list.html
@@ -64,10 +64,10 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
             <span class="app-task-list__task-name">   
               {% if data.section1 == "completed" %}                         
               <a href="employers-select?return_url=task-list" aria-describedby="contact-details-status">
-                Name of organisation
+                Name of employer
               </a>
               {%else%}
-                Name of organisation
+                Name of employer
               {%endif%}             
             </span>
           </li>
