--- a/app/views/v6/traineeships/create/task-list.html
+++ b/app/views/v6/traineeships/create/task-list.html
@@ -63,11 +63,11 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">   
               {% if data.section1 == "completed" %}                         
-              <a href="employers-select?return_url=task-list" aria-describedby="contact-details-status">
-                Name of organisation
+              <a href="employer?return_url=task-list" aria-describedby="contact-details-status">
+                Name of employer
               </a>
               {%else%}
-                Name of organisation
+                Name of employer
               {%endif%}             
             </span>
           </li>
@@ -76,7 +76,7 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
               {% if data.section1 == "completed" %}
-              <a href="std-select?return_url=task-list" aria-describedby="eligibility-status">
+              <a href="traineeship-sector?return_url=task-list" aria-describedby="eligibility-status">
                 Traineeship sector
               </a>
               {% else %}
