Traineeships tweaks, copy changes

--- a/app/views/v6/traineeships/create/check-your-answers.html
+++ b/app/views/v6/traineeships/create/check-your-answers.html
@@ -34,10 +34,10 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Name of organisation
+              Name of employer
             </dt>
             <dd class="govuk-summary-list__value">
-              [[selected organisation]]
+              [[selected employer]]
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -74,16 +74,9 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              What will the trainee be doing?
-              <br>
-              <br>
-              Work experience and training provided
+              Training provided
             </dt>
             <dd class="govuk-summary-list__value">
-              [[your description]]
-              <br>
-              <br>
-              <br>
               [[your description]]
             </dd>
             <dd class="govuk-summary-list__actions">
@@ -94,7 +87,7 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
           </div>
         </dl>
 
-        <h2 class="govuk-heading-m">Employment details</h2>
+        <h2 class="govuk-heading-m">Placement details</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
 
@@ -118,6 +111,21 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
               </a>
             </dd>
           </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Work experience provided
+            </dt>
+            <dd class="govuk-summary-list__value">
+              [[your description]]
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> number of positions</span>
+              </a>
+            </dd>
+          </div>
+
 
 
           <div class="govuk-summary-list__row">
@@ -256,20 +264,20 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
               Employer information
               <br>
               <br>
-              Disability Confident Employer?
-              <br>
-              <br>
               Organisation website (optional)
+              <br>
+              <br>
+              Disability Confident employer?
             </dt>
             <dd class="govuk-summary-list__value">
               [[selected information]]
               <br>
               <br>
               <br>
-              [[Yes if selected tick box, No if not selected]]
+              [[your description, or if the user has not written anything just put None]]     
               <br>
               <br>
-              [[your description, or if the user has not written anything just put None]]              
+              [[Yes if selected tick box, No if not selected]]         
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
