--- a/app/views/v6/traineeships/create/confirmation.html
+++ b/app/views/v6/traineeships/create/confirmation.html
@@ -31,7 +31,7 @@ Vacancy submitted for approval - Recruitment - {{serviceName}} - GOV.UK
     <form method="post">
 
       <div class="govuk-button-group govuk-!-margin-top-5">
-        <a class="govuk-button" href="task-list">Create another vacancy</a>
+        <a class="govuk-button" href="employers-select">Create another vacancy</a>
       </div>
       <a class="govuk-link" href="../dashboard">Return to dashboard</a>
 
