--- a/app/views/v6/traineeships/create/confirmation.html
+++ b/app/views/v6/traineeships/create/confirmation.html
@@ -27,7 +27,7 @@ Vacancy submitted for approval - Recruitment - {{serviceName}} - GOV.UK
     <p class="govuk-body">
       We’ll check the vacancy and tell you within 24 hours if you need to make any edits. If the vacancy is not approved, we’ll let you know on the dashboard what changes you’ll need to make. <a href="../notifications/notification-preferences-new">Manage your recruitment emails</a> if you’d rather get an email.</p>
     {% endif %}
-    <p class="govuk-body">When we approve your vacancy, it will appear on the ​<a href="https://www.gov.uk/apply-apprenticeship">Find an apprenticeship service (opens in a new tab)</a>.</p>
+    <p class="govuk-body">When we approve your vacancy, it will appear on ​<a href="https://www.gov.uk/find-traineeship" target="_blank">Find a traineeship (opens in a new tab)</a>.</p>
     <form method="post">
 
       <div class="govuk-button-group govuk-!-margin-top-5">
