Updated copy on start page for traineeships

--- a/app/views/v6/traineeships/create/start-page.html
+++ b/app/views/v6/traineeships/create/start-page.html
@@ -22,7 +22,8 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
       <p class="govuk-body">Before you create a vacancy, you’ll need to know:</p>
       <ul class="govuk-list govuk-list--bullet">
         <li>the name of the employer</li>
-        <li>what the trainee will be doing on the placement and the training they will get</li>
+        <li>what work experience the trainee will get</li>
+        <li>the training the trainee will get from the training provider</li>
         <li>the duration of the traineeship</li>
         <li>the number of hours the trainee will be on placement each week</li>
       </ul>
